--- a/stylesheets/dash-style.css
+++ b/stylesheets/dash-style.css
@@ -21,8 +21,10 @@
     grid-row: 1/3;
     grid-column: 1/2;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     overflow: auto;
+    padding: 20px;
+    gap: 20px
 }
 
 #announcement-container{
