--- a/stylesheets/dash-style.css
+++ b/stylesheets/dash-style.css
@@ -15,6 +15,8 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
+    column-gap: 20px;
+    padding:20px;
 }
 
 #project-container{
@@ -23,7 +25,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     overflow: auto;
-    padding: 20px;
     gap: 20px
 }
 
@@ -32,6 +33,7 @@
     grid-row: 1/2;
     display: flex;
     flex-direction: column;
+    padding: 20px;
 }
 
 #trending-container{
@@ -39,6 +41,8 @@
     grid-column: 2/3;
     display: flex;
     flex-direction: column;
+    padding: 20px;  
+    margin-top: 50px;
 }
 
 #project-container img{
@@ -49,5 +53,34 @@
 #project-container p,
 #trending-container p,
 #announcement-container p{
-    font-size: 10px;
+    font-size: 15px;
+}
+
+#announcement-container,
+#trending-container{
+    background-color: white;
+    border-radius: 10px;
+}
+
+#project-container .project-card{
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#announcement-container > .announcement-card{
+    padding: 10px;
+}
+
+#announcement-container > .announcement-card + .announcement-card{
+    border-top: 1px solid lightgray;
+}
+
+#project-container .card-essential-sign-container{
+    display: flex;
+    justify-content: end;
+}
+
+#project-container .card-essential-sign-container img+img{
+    margin-left: 15px;
 }
