--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,5 +14,5 @@ body{
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns:  150px 1fr;
+    grid-template-columns:  1fr 9fr;
 }
